change title in edit mode to the service's name

--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Detail.cshtml
@@ -11,7 +11,7 @@
     string title, cta;
     if (Model.Flow == JourneyFlow.Edit)
     {
-        title = "Service details";
+        title = service.Name!;
         cta = "Save";
     }
     else
