--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Edit-Confirmation.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/manage-services/Service-Edit-Confirmation.cshtml
@@ -12,7 +12,7 @@
         </h1>
 
         @* todo: need to add service type here and in add confirmation link *@
-        <p>Any changes will show in the directory straight away. You can <a asp-page="/manage-services/Index">return to the list of services</a>.</p>
+        <p>Any changes will show in the directory straight away. You can <a asp-page="/manage-services/Index" asp-route-serviceType="@Model.ServiceType">return to the list of services</a>.</p>
 
         <a class="govuk-button" asp-page="/Welcome">Go to homepage</a>
     </div>
