--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_ManageServicesCard.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_ManageServicesCard.cshtml
@@ -2,7 +2,7 @@
 
 <div class="card">
     <h3 class="govuk-heading-s">
-        <a href="/manage-services?servicetype=@Model">Manage services</a>
+        <a href="/staged?servicetype=@Model">Manage services</a>
     </h3>
     <p class="govuk-body-s">View, change or delete services shown in the directory.</p>
 </div>
