--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -9,14 +9,16 @@
     <a href="/staged" class="govuk-back-link">Back</a>
 }
 
-
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-third">
+    <div class="govuk-grid-column-two-third">
         <h1 class="govuk-heading-l">@Model.Service!.Name</h1>
-        
+
+        <summary-card title="Description">
+            <summary-row show-empty class="fh-pre-wrap">@Model.Service!.Description</summary-row>
+        </summary-card>
+
         <summary-card title="General">
             <summary-row key="Flags">todo</summary-row>
-
             <summary-row key="Reading level">@Model.ContentCheckResponse.ReadingLevel</summary-row>
             <summary-row key="Notes" show-empty>@Model.ContentCheckResponse.Notes</summary-row>
         </summary-card>
