--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -14,7 +14,7 @@
         <h1 class="govuk-heading-l">@Model.Service!.Name</h1>
 
         <summary-card title="Description">
-            <summary-row key="Description" show-empty class="fh-pre-wrap">@Model.Service!.Description</summary-row>
+            <summary-row key="Description" show-empty class="fh-pre-wrap">@Model.HighlightedDescription</summary-row>
         </summary-card>
 
         <summary-card title="General">
