--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckCategory.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckCategory.cshtml
@@ -10,8 +10,9 @@
             @if (!string.IsNullOrEmpty(instance.SuggestedReplacement))
             {
                 <summary-row key="@instance.Reason"
-                             action1="Edit" action1-href=""
-                             action2="Accept suggestion">@instance.Content</summary-row>
+                             action1="Edit" action1-href="">@instance.Content</summary-row>
+                <summary-row key="Suggested replacement"
+                             action1="Accept suggestion" action1-href="">@instance.SuggestedReplacement</summary-row>
             }
             else
             {
