--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -46,11 +46,11 @@
         <summary-card title="Content Summary">
             @* todo: enumerable and foreach *@
             @* todo: details below, or conditional reveal? *@
-            <summary-row key="Inappropriate language">@(Model.ContentCheckResponse.InappropriateLanguage.Flag ? GetTag("NONE", "green") : GetTag("PRESENT", "red"))</summary-row>
-            <summary-row key="Political bias">@(Model.ContentCheckResponse.PoliticisedSentiment.Flag ? GetTag("NONE", "green") : GetTag("PRESENT", "red"))</summary-row>
-            <summary-row key="Contains PII">@(Model.ContentCheckResponse.PII.Flag ? GetTag("NONE", "green") : GetTag("PRESENT", "red"))</summary-row>
-            <summary-row key="GDS style violations">@(Model.ContentCheckResponse.StyleViolations.Flag ? GetTag("NONE", "green") : GetTag("PRESENT", "red"))</summary-row>
-            <summary-row key="Grammar and Spelling">@(Model.ContentCheckResponse.GrammarAndSpelling.Flag ? GetTag("NONE", "green") : GetTag("PRESENT", "red"))</summary-row>
+            <summary-row key="Inappropriate language">@(Model.ContentCheckResponse.InappropriateLanguage.Flag ? GetTag("PRESENT", "red") : GetTag("NONE", "green"))</summary-row>
+            <summary-row key="Political bias">@(Model.ContentCheckResponse.PoliticisedSentiment.Flag ? GetTag("PRESENT", "red") : GetTag("NONE", "green"))</summary-row>
+            <summary-row key="Contains PII">@(Model.ContentCheckResponse.PII.Flag ? GetTag("PRESENT", "red") : GetTag("NONE", "green"))</summary-row>
+            <summary-row key="GDS style violations">@(Model.ContentCheckResponse.StyleViolations.Flag ? GetTag("PRESENT", "red") : GetTag("NONE", "green"))</summary-row>
+            <summary-row key="Grammar and Spelling">@(Model.ContentCheckResponse.GrammarAndSpelling.Flag ? GetTag("PRESENT", "red") : GetTag("NONE", "green"))</summary-row>
             <summary-row key="Incorrect details">@GetTag("NONE", "green")</summary-row>
         </summary-card>        
 
