--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -9,6 +9,9 @@
     <a href="/staged" class="govuk-back-link">Back</a>
 }
 
+@* todo: card for each instance, rather than 1 card per category with multiple instances *@
+@* todo: play with settings like temperature - occasionally e.g. pii is missed *@
+
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-third">
         <h1 class="govuk-heading-l">@Model.Service!.Name</h1>
