--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckCategory.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckCategory.cshtml
@@ -1,28 +1,32 @@
 ﻿@model FamilyHubs.ServiceDirectory.Admin.Web.Pages.staged.CategoryDisplay
 
-<summary-card title="@Model.Name">
-    @* todo, remove flag and just check for any instances *@
-    @if (Model.Category?.Flag == true)
-    {
-        //todo: card probably not suitable for display?
-        @foreach (var instance in Model.Category!.Instances)
+@* todo: either show card with None, or don't show card - doesn't matter too much for POC, as design will change anyway*@
+@if (Model.Category?.Flag == true)
+{
+    <summary-card title="@Model.Name">
+        @* todo, remove flag and just check for any instances *@
+        @if (Model.Category?.Flag == true)
         {
-            @if (!string.IsNullOrEmpty(instance.SuggestedReplacement))
+            //todo: card probably not suitable for display?
+            @foreach (var instance in Model.Category!.Instances)
             {
-                <summary-row key="@instance.Reason"
-                             action1="Edit" action1-href="">@instance.Content</summary-row>
-                <summary-row key="Suggested replacement"
-                             action1="Accept suggestion" action1-href="">@instance.SuggestedReplacement</summary-row>
-            }
-            else
-            {
-                <summary-row key="@instance.Reason"
-                             action1="Edit" action1-href="">@instance.Content</summary-row>
+                @if (!string.IsNullOrEmpty(instance.SuggestedReplacement))
+                {
+                    <summary-row key="@instance.Reason"
+                                 action1="Edit" action1-href="">@instance.Content</summary-row>
+                    <summary-row key="Suggested replacement"
+                                 action1="Accept suggestion" action1-href="">@instance.SuggestedReplacement</summary-row>
+                }
+                else
+                {
+                    <summary-row key="@instance.Reason"
+                                 action1="Edit" action1-href="">@instance.Content</summary-row>
+                }
             }
         }
-    }
-    else
-    {
-        <p>None</p>
-    }
-</summary-card>
+        else
+        {
+            <p>None</p>
+        }
+    </summary-card>
+}
