--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -11,6 +11,7 @@
 
 @* todo: card for each instance, rather than 1 card per category with multiple instances *@
 @* todo: play with settings like temperature - occasionally e.g. pii is missed *@
+@* todo: summary for whole content, notes for each instance*@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-third">
