--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/performance-data/Connect.cshtml
@@ -31,12 +31,12 @@
         @await Html.PartialAsync("_Navigation", Model.NavigationDataModel)
     </div>
     <div class="govuk-grid-column-three-quarters">
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-3">Overall totals for @(Model.OrgName ?? "Connect")</h2>
+        <h2 data-testid="h2-overall" class="govuk-heading-s govuk-!-margin-bottom-3">Overall totals for @(Model.OrgName ?? "Connect")</h2>
         <table data-testid="table-overall" class="govuk-table govuk-!-font-size-16">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Measure</th>
-                <th scope="col" class="govuk-table__header">Number</th>
+                <th scope="col" data-testid="th-measure-overall" class="govuk-table__header govuk-!-width-one-half">Measure</th>
+                <th scope="col" data-testid="th-number-overall" class="govuk-table__header">Number</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -50,12 +50,12 @@
             </tbody>
         </table>
 
-        <h2 class="govuk-heading-s govuk-!-margin-bottom-3">Totals for the last 7 days</h2>
+        <h2 data-testid="h2-daily" class="govuk-heading-s govuk-!-margin-bottom-3">Totals for the last 7 days</h2>
         <table data-testid="table-recent" class="govuk-table govuk-!-font-size-16">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Measure</th>
-                <th scope="col" class="govuk-table__header">Number</th>
+                <th scope="col" data-testid="th-measure-daily" class="govuk-table__header govuk-!-width-one-half">Measure</th>
+                <th scope="col" data-testid="th-number-daily" class="govuk-table__header">Number</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
@@ -69,12 +69,12 @@
             </tbody>
         </table>
 
-        <h2 class="govuk-heading-s govuk-!-margin-top-9 govuk-!-margin-bottom-3">Searches in the last 4 weeks</h2>
+        <h2 data-testid="h2-weekly" class="govuk-heading-s govuk-!-margin-top-9 govuk-!-margin-bottom-3">Searches in the last 4 weeks</h2>
         <table data-testid="table-breakdown" class="govuk-table govuk-!-font-size-16">
             <thead class="govuk-table__head">
             <tr class="govuk-table__row">
-                <th scope="col" class="govuk-table__header govuk-!-width-one-half">Week</th>
-                <th scope="col" class="govuk-table__header">Number of searches</th>
+                <th scope="col" data-testid="th-week-weekly" class="govuk-table__header govuk-!-width-one-half">Week</th>
+                <th scope="col" data-testid="th-number-of-searches-weekly" class="govuk-table__header">Number of searches</th>
             </tr>
             </thead>
             <tbody class="govuk-table__body">
