--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -14,6 +14,7 @@
 
 @* todo: play with settings like temperature - occasionally e.g. pii is missed *@
 @* todo: move content into content violation card: that way can check more fields & don't have to worry about overlapping highlights*@
+@* todo : put the reason in the card heading *@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-third">
