--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckInstance.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/Shared/_CheckInstance.cshtml
@@ -6,8 +6,7 @@
 
     @if (!string.IsNullOrEmpty(Model.Instance.Content) && !string.IsNullOrEmpty(Model.Instance.Reason))
     {
-        <summary-row key="@Model.Instance.Reason"
-                     action1="Edit" action1-href="">@Model.Instance.Content</summary-row>
+        <summary-row key="@Model.Instance.Reason">@Model.Instance.Content</summary-row>
     }
 
     @* SuggestedReplacement is mandatory according to the prompt, but we need to be as tolerant as possible of what the assistant returns *@
