--- a/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
+++ b/src/FamilyHubs.ServiceDirectory.Admin.Web/Pages/staged/Service-Details.cshtml
@@ -14,7 +14,8 @@
 
 @* todo: play with settings like temperature - occasionally e.g. pii is missed *@
 @* todo: move content into content violation card: that way can check more fields & don't have to worry about overlapping highlights*@
-@* todo : put the reason in the card heading *@
+@* todo: put the reason in the card heading *@
+@* todo: show suggestion as field with highlighted suggestion - if the content doesn't match, then don't offer the suggestion *@
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-third">
